--- a/biscuit/stylesheets/mixins/_gradients.scss
+++ b/biscuit/stylesheets/mixins/_gradients.scss
@@ -1,8 +1,6 @@
-/*!
- * Based on Bootstrap's _gradients.scss v5.3.2 (https://getbootstrap.com/)
- * Copyright 2011-2023 The Bootstrap Authors
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+// Based on Bootstrap's _gradients.scss v5.3.2 (https://getbootstrap.com/)
+// Copyright 2011-2023 The Bootstrap Authors
+// Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
 
 // Biscuit/Finalium 2 changes:
 // * Removed every mixins besides gradient-x and gradient-y
