--- a/biscuit/stylesheets/_forms.scss
+++ b/biscuit/stylesheets/_forms.scss
@@ -3,7 +3,7 @@
 }
 
 .form-submit {
-  width: 350px;
+  width: 100%;
 }
 
 .form-submit-wide {
@@ -23,6 +23,6 @@
 
 label {
   display: block;
-  color: #4f4033;
+  color: rgba(255, 255, 255, 0.50);
   margin-bottom: 4px;
 }
