--- a/orange/skins/qobo/templates/users.twig
+++ b/orange/skins/qobo/templates/users.twig
@@ -15,7 +15,7 @@
 								<td>
 									<a href="/user?name={{ user.info.username }}">
 										<img src="{{ profile_picture(user.info.username) }}" width="80"
-											 alt="{{ user.info.username }}" class="content-image">
+											 alt="{{ user.info.username }}" class="content-image pfp">
 									</a>
 								</td>
 								<td>
