--- a/biscuit/stylesheets/_comments.scss
+++ b/biscuit/stylesheets/_comments.scss
@@ -1,10 +1,10 @@
 .comment {
-  background: white;
   padding-bottom: 5px;
 
   img.pfp {
-    width: 100px;
+    width: 80px;
     float: left;
+    padding-right: 5px;
   }
 
   .comment-details {
@@ -23,13 +23,13 @@
   }
 
   .comment-body {
-    width: 696px;
+    width: 775px;
     float: left;
 
     .comment-contents {
       padding: 10px;
-      background: #fcfcfc;
-      border: 1px solid #eee;
+      background: lighten($content-box-border-color, 3.5%);
+      border: 1px solid darken($content-box-border-color, 1.5%);;
 
       p {
         margin: 0;
@@ -49,7 +49,7 @@
 #replies {
   .comment {
     img.pfp {
-      width: 75px;
+      width: 60px;
     }
 
     .comment-body {
