--- a/biscuit/stylesheets/_profile_page.scss
+++ b/biscuit/stylesheets/_profile_page.scss
@@ -1,10 +1,7 @@
-$pfp-width-profiles: 95px;
-$pfp-width-watch: 35px;
-
 div.profile-box {
   display: flex;
   padding: 10px;
-  background-color: $content-box-border-color;
+  height: $profile-intro-height;
 
   &.centered {
     text-align: center
@@ -29,7 +26,6 @@ div.profile-box {
       font-size: 15pt;
       font-weight: bold;
       margin-bottom: 5px;
-      color: #000000;
     }
 
     .profile-box-links {
@@ -57,5 +53,14 @@ div.profile-box {
   /* will this fuck up with wide thumbnails? */
   img {
     height: 200px;
+  }
+}
+
+.profile-intro {
+  background: rgba($content-box-border-color, 75%);
+  backdrop-filter: blur(10px);
+  margin-top: -$profile-intro-height;
+  .page-contents {
+    margin: 0;
   }
 }
