--- a/biscuit/stylesheets/_watch_page.scss
+++ b/biscuit/stylesheets/_watch_page.scss
@@ -1,6 +1,9 @@
 .submission {
   text-align: center;
-  background: darken($content-box-border-color, 7.5%);
+  background: darken($content-box-border-color, 3.5%);
+  border: 1px solid $content-box-border-color;
+  border-bottom: none;
+  border-radius: $content-box-roundness;
 
   .img-submission {
     @include responsive('small') {
@@ -31,13 +34,15 @@
 }
 
 .watch-box {
+  background: $content-box-background-color;
   border: 1px solid $content-box-border-color;
+  border-radius: $content-box-roundness;
   padding: 6px;
   overflow: hidden;
   word-break: break-word;
 
   .watch-box-description {
-    // duplicate of the context-text class
+    // duplicate of the content-text class
     max-width: 680px;
     margin: 0 auto;
     word-wrap: break-word;
