proper version number and uhhh incomplete ui stuff

--- a/biscuit/stylesheets/_jumbotron.scss
+++ b/biscuit/stylesheets/_jumbotron.scss
@@ -3,8 +3,22 @@
 
   &.profile-banner {
     background: #111;
+    background-size: cover;
     margin-top: -($header-user-height + $header-main-height);
     height: 250px + ($header-user-height + $header-main-height);
+
+    .jumbotron-container {
+      padding-top: ($header-user-height + $header-main-height);
+    }
+  }
+
+  &.qobo-banner {
+    background: $primary;
+    background-image: url("/assets/qobo_banner.png");
+    background-size: cover;
+    background-position: center;
+    margin-top: -($header-user-height + $header-main-height);
+    height: 200px + ($header-user-height + $header-main-height);
 
     .jumbotron-container {
       padding-top: ($header-user-height + $header-main-height);
