--- a/orange/skins/qobo/templates/settings.twig
+++ b/orange/skins/qobo/templates/settings.twig
@@ -6,7 +6,8 @@
         {% if error %}
             <div class="banner banner-danger">{{ error }}</div>
         {% endif %}
-        <div class="profile-box">
+        <div class="section">
+        <div class="section-title">
             <h1>Account settings</h1>
         </div>
         <div class="content-box">
@@ -76,5 +77,6 @@
                        value="Save changes">
             </div>
         </form>
+        </div>
         </div>
     {% endblock %}
