--- a/biscuit/stylesheets/_profile_page.scss
+++ b/biscuit/stylesheets/_profile_page.scss
@@ -58,8 +58,11 @@ div.profile-box {
 
 .profile-intro {
   background: rgba($content-box-border-color, 75%);
-  backdrop-filter: blur(10px);
+  background: linear-gradient(0deg, rgba($content-box-border-color,75%) 0%, rgba(0,0,0,0) 100%);
   margin-top: -$profile-intro-height;
+
+  text-shadow: 0 0 0.5em #000000;
+
   .page-contents {
     margin: 0;
   }
