--- a/orange/skins/qobo/templates/admin.twig
+++ b/orange/skins/qobo/templates/admin.twig
@@ -3,68 +3,74 @@
 {% set title = "Admin dashboard" %}
 
 	{% block content %}
-		<div class="profile-box">
-			<h1>Admin dashboard</h1>
-		</div>
-		<div class="content-box">
-			<canvas id="myChart"></canvas>
-		</div>
-		<div class="content-header">
-			<span>Stats</span>
-		</div>
-		<div class="content-box">
-			<ul>
-				<li>Uname: {{ data.system.uname }}</li>
-				{% for key, number in data.numbers %}
-					<li>{{ key }}: {{ number }}</li>
-				{% endfor %}
-			</ul>
-		</div>
-		<div class="content-header">
-			<span>Ban user</span>
-		</div>
-		<div class="content-box">
-			<form name="uploadForm" id="uploadForm" method="post" action="admin.php" enctype="multipart/form-data">
-				<div class="banner banner-secondary">
-					<strong>NOTE</strong>: We don't support expiring bans yet.
-				</div>
-				<input type="hidden" id="action" name="action" value="ban_user" />
-				<div class="form-input">
-					<label for="user_to_ban">Username:</label>
-					<input type="text" class="form-submit" id="user_to_ban" name="user_to_ban" required="">
-					<label for="reason">Reason:</label>
-					<input type="text" class="form-submit" id="reason" name="reason" required="">
-				</div>
-				<div class="form-button-container">
-					<input class="button button-danger" type="submit" id="upload" name="upload"
-						   value="Ban">
-				</div>
-			</form>
-		</div>
-		<div class="content-header">
-			<span>Banned users</span>
-		</div>
-		<div class="content-box">
-			<div class="banner banner-secondary">
-				<strong>NOTE</strong>: If the account gets automatically banned after being unbanned, then the account's latest IP is IP banned.
+		<div class="section">
+			<div class="section-title">
+				<h1>Admin dashboard</h1>
 			</div>
-			<table class="c1">
-			<tr class="h">
-				<th style="width:150px">Username</th>
-				<th>Reason</th>
-				<th style="width:70px">Unban</th>
-			</tr>
-			{% for user in data.bans %}
-				<tr style="height: 30px;">
-					<td>{{ user.name }}</td>
-					<td>
-						{{ user.ban_reason }}
-						<small>({{ user.ban_time | date('F j, Y') }}/{{ user.ban_time | relative_time }})</small>
-					</td>
-					<td><a href="/admin.php?action=unban_user&user={{ user.id }}" class="button button-danger">Unban</a></td>
-				</tr>
-			{% endfor %}
-			</table>
+			<div class="content-header">
+				<span>Over the years</span>
+			</div>
+			<div class="content-box">
+				<span>Since {{ data.time.formatted_date }} ({{ data.time.relative_days }} days ago)</span>
+				<canvas id="myChart"></canvas>
+			</div>
+			<div class="content-header">
+				<span>Stats</span>
+			</div>
+			<div class="content-box">
+				<ul>
+					<li>Uname: {{ data.system.uname }}</li>
+					{% for key, number in data.numbers %}
+						<li>{{ key }}: {{ number }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+			<div class="content-header">
+				<span>Ban user</span>
+			</div>
+			<div class="content-box">
+				<form name="uploadForm" id="uploadForm" method="post" action="admin.php" enctype="multipart/form-data">
+					<div class="banner banner-secondary">
+						<strong>NOTE</strong>: We don't support expiring bans yet.
+					</div>
+					<input type="hidden" id="action" name="action" value="ban_user" />
+					<div class="form-input">
+						<label for="user_to_ban">Username:</label>
+						<input type="text" class="form-submit" id="user_to_ban" name="user_to_ban" required="">
+						<label for="reason">Reason:</label>
+						<input type="text" class="form-submit" id="reason" name="reason" required="">
+					</div>
+					<div class="form-button-container">
+						<input class="button button-danger" type="submit" id="upload" name="upload"
+							   value="Ban">
+					</div>
+				</form>
+			</div>
+			<div class="content-header">
+				<span>Banned users</span>
+			</div>
+			<div class="content-box">
+				<div class="banner banner-secondary">
+					<strong>NOTE</strong>: If the account gets automatically banned after being unbanned, then the account's latest IP is IP banned.
+				</div>
+				<table class="c1">
+					<tr class="h">
+						<th style="width:150px">Username</th>
+						<th>Reason</th>
+						<th style="width:70px">Unban</th>
+					</tr>
+					{% for user in data.bans %}
+						<tr style="height: 30px;">
+							<td>{{ user.name }}</td>
+							<td>
+								{{ user.ban_reason }}
+								<small>({{ user.ban_time | date('F j, Y') }}/{{ user.ban_time | relative_time }})</small>
+							</td>
+							<td><a href="/admin.php?action=unban_user&user={{ user.id }}" class="button button-danger">Unban</a></td>
+						</tr>
+					{% endfor %}
+				</table>
+			</div>
 		</div>
 	{% endblock %}
 
