--- a/orange/skins/qobo/templates/edit.twig
+++ b/orange/skins/qobo/templates/edit.twig
@@ -3,59 +3,61 @@
 {% set title = "Modify submission" %}
 
 	{% block content %}
-        <div class="content-header">
-            <span>Modify submission ({{ data.id }})</span>
-        </div>
-        <div class="content-box">
-            <form name="uploadForm" id="uploadForm" method="post" action="edit.php" enctype="multipart/form-data">
-                <img src="{{ thumbnail(data.id, data.type) }}" width="300"
-                     alt="{{ data.title }}" class="form-image">
-                <input type="hidden" name="vid_id" value="{{ data.id }}">
+        <div class="section">
+            <div class="section-title">
+                <h1>Modify submission ({{ data.id }})</h1>
+            </div>
+            <div class="content-box">
+                <form name="uploadForm" id="uploadForm" method="post" action="edit.php" enctype="multipart/form-data">
+                    <img src="{{ thumbnail(data.id, data.type) }}" width="300"
+                         alt="{{ data.title }}" class="form-image">
+                    <input type="hidden" name="vid_id" value="{{ data.id }}">
 
-                <div class="form-input">
-                    Title:
-                    <input type="text" class="form-submit" name="title"
-                           value="{{ data.title }}">
-                </div>
+                    <div class="form-input">
+                        Title:
+                        <input type="text" class="form-submit" name="title"
+                               value="{{ data.title }}">
+                    </div>
 
-                <div class="form-input">
-                    Description:
-                    <textarea class="form-submit" name="desc" maxlength="2000"
-                              form="uploadForm"
-                              style="overflow:hidden;resize:vertical" rows="3">{{ data.description }}</textarea>
-                </div>
+                    <div class="form-input">
+                        Description:
+                        <textarea class="form-submit" name="desc" maxlength="2000"
+                                  form="uploadForm"
+                                  style="overflow:hidden;resize:vertical" rows="3">{{ data.description }}</textarea>
+                    </div>
 
-                {% if show_work_in_progress_stuff %}
-                <div class="form-input">
-                    Visibility:
-                    <select name="visibility" id="visibility">
-                        <option value="public">Public</option>
-                        <option value="scraps">Public (scraps)</option>
-                        <option value="unlisted">Unlisted</option>
-                        <option value="private">Private</option>
-                    </select>
-                </div>
+                    {% if show_work_in_progress_stuff %}
+                        <div class="form-input">
+                            Visibility:
+                            <select name="visibility" id="visibility">
+                                <option value="public">Public</option>
+                                <option value="scraps">Public (scraps)</option>
+                                <option value="unlisted">Unlisted</option>
+                                <option value="private">Private</option>
+                            </select>
+                        </div>
 
-                <div class="form-input">
-                    <input type="checkbox" id="block_guests" name="block_guests" value="yes">
-                    <label for="block_guests"> Block guests from viewing this submission</label><br>
-                </div>
+                        <div class="form-input">
+                            <input type="checkbox" id="block_guests" name="block_guests" value="yes">
+                            <label for="block_guests"> Block guests from viewing this submission</label><br>
+                        </div>
 
-                <div class="form-input">
-                    <input type="checkbox" id="block_comments" name="block_comments" value="yes">
-                    <label for="block_comments"> Block users from commenting in this submission</label><br>
-                </div>
-                {% endif %}
+                        <div class="form-input">
+                            <input type="checkbox" id="block_comments" name="block_comments" value="yes">
+                            <label for="block_comments"> Block users from commenting in this submission</label><br>
+                        </div>
+                    {% endif %}
 
-                <div class="form-input">
-                    <label for="thumbnail">Custom thumbnail:</label>
-                    <input type="file" name="thumbnail" id="thumbnail">
-                </div>
+                    <div class="form-input">
+                        <label for="thumbnail">Custom thumbnail:</label>
+                        <input type="file" name="thumbnail" id="thumbnail">
+                    </div>
 
-                <div class="form-button-container">
-                    <input type="submit" id="upload" name="upload" class="button button-primary"
-                           value="Save changes">
-                </div>
-            </form>
+                    <div class="form-button-container">
+                        <input type="submit" id="upload" name="upload" class="button button-primary"
+                               value="Save changes">
+                    </div>
+                </form>
+            </div>
         </div>
     {% endblock %}
