--- a/orange/skins/qobo/templates/write.twig
+++ b/orange/skins/qobo/templates/write.twig
@@ -3,31 +3,33 @@
 {% set title = "Write journal" %}
 
 	{% block content %}
-        <div class="profile-box">
-            <h1>Write a new journal entry</h1>
-        </div>
-        <div class="content-box">
-        <form name="uploadForm" id="uploadForm" method="post" action="write.php" enctype="multipart/form-data">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div class="form-input">
-                        <label for="title">Title:</label>
-                    <input type="text" class="form-submit" id="title" name="title" required>
-                    </div>
-
-                    <div class="form-input">
-                        <label for="desc">Content:</label>
-                        <textarea class="form-submit" name="desc" maxlength="65535"
-                              form="uploadForm"
-                              style="overflow:hidden;resize:vertical" rows="10" required></textarea>
-                    </div>
-
-                    <div class="form-button-container">
-                        <input class="button button-primary" type="submit" id="upload" name="upload"
-                               value="Submit">
-                    </div>
-                </div>
+        <div class="section">
+            <div class="section-title">
+                <h1>Write a new journal entry</h1>
             </div>
-        </form>
+            <div class="content-box">
+                <form name="uploadForm" id="uploadForm" method="post" action="write.php" enctype="multipart/form-data">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="form-input">
+                                <label for="title">Title:</label>
+                                <input type="text" class="form-submit" id="title" name="title" required>
+                            </div>
+
+                            <div class="form-input">
+                                <label for="desc">Content:</label>
+                                <textarea class="form-submit" name="desc" maxlength="65535"
+                                          form="uploadForm"
+                                          style="overflow:hidden;resize:vertical" rows="10" required></textarea>
+                            </div>
+
+                            <div class="form-button-container">
+                                <input class="button button-primary" type="submit" id="upload" name="upload"
+                                       value="Submit">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     {% endblock %}
